# pyarithmeticlib

./: .readthedocs.yml  .travis.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  expression.py  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pyarithmetic/: __init__.py  expression.py  generator.py
src/pyarithmeticlib/: __init__.py  expression.py  generator.py
tests/: test_expression.py  test_generator.py  test_pyarithmetic.py
